...
                android:layout_marginTop="6dp"
                android:layout_marginBottom="5dp"
                android:layout_centerHorizontal="true"
                android:background="@android:color/darker_gray" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/svMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconifiedByDefault="false"
                app:queryBackground="@color/colorNone"
                android:voiceSearchMode="showVoiceSearchButton|launchRecognizer"
                app:queryHint="Search"
...
                android:imeOptions="actionSearch"
                android:layout_below="@+id/vPullUpTab"
                android:inputType="text"
                />

            <LinearLayout
                android:id="@+id/llFilters"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/svMain"
                >
...
